# compute_server

./: Cargo.toml  docker-compose.yml
.devcontainer/: devcontainer.json
computation/: Cargo.toml
computation/src/: lib.rs
docker/: Dockerfile
dump/: 1_CREATE_TABLES.sql  2_POPULATE_TEST_DATA.sql
server/: Cargo.toml
server/src/: main.rs  validate.rs
server/src/routes/: files.rs
src/: main.rs
src/routes/: export.rs  files.rs  import.rs
static/home/: index.html  index.js  main.css  style.css  upload.html
static/login/: index.js  login.html
static/test/: dragndrop.css  index.html  searchbar.css  sidebar.css
validation/: Cargo.toml
validation/benches/: csv.rs
validation/src/: lib.rs
