[package]
name = "lct"
version = "0.1.0"
authors = ["Mark Pedersen <markpedersen@kpmg.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
actix-files = "0.5.0"
futures = "0.3.12"