[package]
name = "validation"
version = "0.1.0"
authors = ["Mark Pedersen <markpedersen@kpmg.ca>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "time", "macros", "io-util"] }
csv = "1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "csv"
harness = false